--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,4 @@
 {
-<<<<<<< HEAD
-	"C_Cpp.errorSquiggles": "disabled"
-=======
-	"files.associations": {
-		"libft.h": "c",
-		"minishell.h": "c"
-	}
->>>>>>> 6e08f5485dab275c4440022cdfa79ce58351584d
+  "C_Cpp_Runner.msvcBatchPath": "",
+  "C_Cpp.errorSquiggles": "disabled"
 }
