--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,14 @@
 "C_Cpp_Runner.msvcSecureNoWarnings": false,
 "files.associations": {
 	"stdbool.h": "c",
-	"minishell.h": "c"
+	"minishell.h": "c",
+	"optional": "c",
+	"ostream": "c",
+	"system_error": "c",
+	"array": "c",
+	"functional": "c",
+	"tuple": "c",
+	"type_traits": "c",
+	"utility": "c"
 }
 }
