--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,17 +55,18 @@
   "C_Cpp_Runner.useLeakSanitizer": false,
   "C_Cpp_Runner.showCompilationTime": false,
   "C_Cpp_Runner.useLinkTimeOptimization": false,
-"C_Cpp_Runner.msvcSecureNoWarnings": false,
-"files.associations": {
-	"stdbool.h": "c",
-	"minishell.h": "c",
-	"optional": "c",
-	"ostream": "c",
-	"system_error": "c",
-	"array": "c",
-	"functional": "c",
-	"tuple": "c",
-	"type_traits": "c",
-	"utility": "c"
-}
+  "C_Cpp_Runner.msvcSecureNoWarnings": false,
+  "files.associations": {
+    "stdbool.h": "c",
+    "minishell.h": "c",
+    "optional": "c",
+    "ostream": "c",
+    "system_error": "c",
+    "array": "c",
+    "functional": "c",
+    "tuple": "c",
+    "type_traits": "c",
+    "utility": "c"
+  },
+  "C_Cpp.errorSquiggles": "disabled"
 }
