--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,7 +68,9 @@
 	"type_traits": "c",
 	"utility": "c",
 	"my_signal.h": "c",
-	"errors.h": "c"
+	"errors.h": "c",
+	"utils.h": "c",
+	"env.h": "c"
 },
   "C_Cpp.errorSquiggles": "disabled"
 }
