--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,22 +57,7 @@
   "C_Cpp_Runner.useLinkTimeOptimization": false,
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
-    "stdbool.h": "c",
-    "minishell.h": "c",
-    "optional": "c",
-    "ostream": "c",
-    "system_error": "c",
-    "array": "c",
-    "functional": "c",
-    "tuple": "c",
-    "type_traits": "c",
-    "utility": "c",
-    "my_signal.h": "c",
-    "errors.h": "c",
-    "utils.h": "c",
-    "env.h": "c",
-    "lexer.h": "c",
-    "future": "c"
-  },
+	"my_signal.h": "c"
+},
   "C_Cpp.errorSquiggles": "disabled"
 }
